--- a/1stroom/monitor.html
+++ b/1stroom/monitor.html
@@ -14,7 +14,15 @@
         <script type="text/javascript">
             function gate() {
                 var UserInput = prompt("入力してください", "");
-                location.href = UserInput + ".html";
+
+                if( /\W+/g.test(UserInput) ) {
+                    alert("半角英数字のみを入力してください。") 
+                    }
+                    else if(UserInput == 49375  ) {
+                        location.href = "1stopen.html";
+                    } else {
+                        alert("パスワードが違います！")
+                    }
             }
         </script>
 
